2005-03-19 multipath-tools-0.4.4

	* [multipath] add "multipath -l -v2 [devname|devt]"
	  support in complement to [mapname|wwid]
	* [kpartx] suppress loop.h private copy. Should fix
	  the reported build problems
	* [multipath] do sysfs_get_mnt_path() only one time
	  and store in a global var.
	* [multipath] further path discovery optimzation
	* [multipath] purge superfluous includes in main.c
	* [libmultipath] introduce a cache file. expiry set
	  to 5 secondes to covert the hotplug event storms.
	* [multipath] split get_pathvec_sysfs(). Introduce
	  get_refwwid() and filter_pathvec()

2005-03-19 multipath-tools-0.4.3

	* [libmultipath] rename find_[mp|hw] to find_[mp|hw]e and
	  introduce a real find_mp().
	* [priority] provison for recursive compilation of prio
	  subdirs, in preparation of merging more signicant
	  prioritizers. Stephan Bader, IBM
	* [libmultipath] add a netapp controler to the hwtable
	* [libmultipath] blacklist() not to discard sda[0-9]*
	  when sda is blacklisted
	* [multipath] add a rr_min_io keyword in config file.
	  Suggested by Igor Feoktistov, NetApp
	* [multipath] stop trying to avoid running in parallel
	* [multipath] bump up params size to 1024
	* [multipathd] put prio callouts in to ramfs. Stephan
	  Bader, IBM
	* [multipath] simplify multibus pgpolicy : no need to
	  copy mp->paths into mp->pg->paths then free source :
	  just copy the ptr and set source to NULL.
	* [multipath] sort PG by descending prio value in
	  group_by_prio. Stephan Bader, IBM
	* [multipath] fix a bug in group_by_prio that lead to
	  creation of multiple PG for a single prio value
	* [multipath] don't store multipaths in a vector anymore :
	  free the "struct multipath" after usage.
	* [multipath] multiple optimizations in the exec plan
	* [multipath] allow "multipath -l -v2 [mapname|wwid]"
	* [build] rip off klibc and move to klcc, at last.
	  Good job hpa. multipath-tools now depend on klibc
	  > 1.0 to build with BUILD=klibc flag.